# vdi-client

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  README_ZH.md  build_and_package.bat  installer.iss
resources/: README.md
src/: loginwindow.cpp  loginwindow.h  main.cpp
